--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,15 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     compile group: 'io.projectreactor', name: 'reactor-core', version: '3.3.11.RELEASE'
     testCompile group: 'io.projectreactor', name: 'reactor-test', version: '3.3.11.RELEASE'
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.0'
 }
